[project]
name = "AgentsWorkflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "gymnasium>=1.1.1",
    "mcp>=1.13.1",
    "openai>=1.101.0",
    "openai-agents>=0.2.9",
    "pathlib>=1.0.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
